--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+ 
+       Copyright 2020 GIT Training 
+-->       
 <head>
 	<title>Simple Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
