simple.html file updated by dev1

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
        Copyright 2020 GIT Training 
 -->       
 <head>
-	<title>Simple Title</title>
+	<title>Simple Title from demo conflict</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+		    some sample text goes in here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git training  2020/2014</p>
 	</footer>
 </body>
 </html>
