--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
        Copyright 2020 GIT Training 
 -->       
 <head>
-	<title>Simple Title</title>
+	<title>simple Title by main dev team</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			give details about your company
 		</p>
 	</main>
 	<footer class="container">
